SBOM-459: Detect binary files in SBOM Manager (#12021)